<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Exit_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="232dp"
        android:text="@string/Exit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FavoriteProduct_btn" />

    <Button
        android:id="@+id/FavoriteProduct_btn"
        android:layout_width="296dp"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="91dp"
        android:text="@string/GetFavorite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Exit_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AllProduct_btn" />

    <Button
        android:id="@+id/AllProduct_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="89dp"
        android:text="@string/Getproducts"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/FavoriteProduct_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>