<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/pro_imag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="181dp"
        app:layout_constraintBottom_toTopOf="@+id/Brand_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/title_value"
        android:layout_width="151dp"
        android:layout_height="56dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/Price_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/pro_imag" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="92dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="174dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="108dp"
        android:text="@string/Title"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/title_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="92dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="169dp"
        android:text="@string/Price"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/Price_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Price_value"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="430dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/title_value" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="71dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="13dp"
        android:text="@string/Brand"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/desc_value"
        app:layout_constraintEnd_toStartOf="@+id/Brand_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/Brand_value"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="370dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/pro_imag" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="97dp"
        android:layout_height="46dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="31dp"
        android:text="@string/Descript"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/desc_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/desc_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="308dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="224dp"
        android:text="@string/Rating"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rating_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <RatingBar
        android:id="@+id/rating_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="447dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toTopOf="@+id/remove_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/remove_btn"
        android:layout_width="208dp"
        android:layout_height="0dp"
        android:layout_marginBottom="141dp"
        android:text="@string/Remove"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_value" />
</androidx.constraintlayout.widget.ConstraintLayout>